# wyllisDetector

./: .gitignore  CMakeLists.txt  conanfile.py  times.cpp
apps/: CMakeLists.txt  capture_video.cpp  wyllisDetector.cpp
cmake/: defaultConfig.cmake  findDependencies.cmake  printInfo.cmake
